--- a/src/views/loading/index.html
+++ b/src/views/loading/index.html
@@ -8,14 +8,14 @@
    html,body{
     width: 100%;
     height: 100%;
+    overflow: hidden;
+    background-color: rgba(red, green, blue, 0.2);
    }
   </style>
 </head>
 
-<body style="display: flex;justify-content: center;align-items: center;background-color: #ccc;width: 100%;height: 100%;">
-  <div style="font-size: 20px;text-align: center;color:#333;">
-    加载中
-  </div>
+<body style="display: flex;justify-content: center;align-items: center;width: 100%;height: 100%;">
+  <div class="loading-img"></div>
 </body>
 
 </html>
