--- a/src/views/loading/index.html
+++ b/src/views/loading/index.html
@@ -8,6 +8,9 @@
    html,body{
     width: 100%;
     height: 100%;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
    }
   </style>
 </head>
